# movici-api-client

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: main.yml  pull_request.yml
src/movici_api_client/api/: __init__.py  auth.py  client.py  common.py  model.py  requests.py
src/movici_api_client/cli/: __main__.py  bootstrap.py  common.py  config.py  cqrs.py  data_dir.py  decorators.py  dependencies.py  exceptions.py  filetransfer.py  helpers.py  main.py  projects.py  testing.py  ui.py  utils.py
src/movici_api_client/cli/controllers/: common.py  config.py  dataset_types.py  datasets.py  login.py  projects.py  scenarios.py  scopes.py  views.py
src/movici_api_client/cli/events/: __init__.py  authorization.py  dataset.py  project.py  scenario.py  view.py
src/movici_api_client/cli/filetransfer/: __init__.py  common.py  download.py  upload.py
src/movici_api_client/cli/handlers/: __init__.py  common.py  local.py  query.py  remote.py
tests/api/: test_client.py  test_common.py  test_requests.py
tests/cli/: conftest.py  test_bootstrap.py  test_common.py  test_config.py  test_cqrs.py  test_data_dir.py  test_decorators.py  test_filetransfer.py  test_main.py  test_ui.py  test_utils.py
tests/cli/controllers/: test_login.py
tests/cli/filetransfer/: test_common.py  test_upload.py
tests/cli/handlers/: conftest.py  test_common.py  test_local.py  test_query.py  test_remote.py
